# compendium-35

./: .gitignore  README.md  init.sh  pyproject.toml
app/: db_init.py
app/controller/: auth.py  competences.py  dons.py  site.py  sorts.py  sources.py
app/model/: categorie_don.py  competence.py  compte.py  condition.py  don.py  possederole.py  role.py  shared_model.py  sort.py  synergiecomp.py  techniques_astucieuses.py
app/sql/: base.sql  db_creation.sql  technique_astucieuses.sql  text_page.sql
app/static/css/: accueil.css  base.css  bootstrap.css.map  bootstrap.min.css.map  font-awesome.css  sorts-liste.css
app/static/fonts/Pterra Regular/: readme.html
app/static/js/: blocs_text.js  bootstrap.bundle.js  bootstrap.bundle.js.map  bootstrap.bundle.min.js.map  jquery.js  tableau.js
app/utils/: builder.py  custom_form.py  decorateur.py
app/view/auth/: connexion.html  inscription.html
app/view/common/: base.html  erreur.html  nav_base.html
app/view/competences/: competence.html  index.html  techniques_astucieuses.html
app/view/dons/: categorie.html  don.html  index.html
app/view/partials/: image_banner.html  nav_connexion.html  nav_deconnecte.html  pagination.html
app/view/site/: index.html
app/view/sorts/: index.html  liste.html  recherche.html  sort.html
